Fix PWA configuration for GitHub Pages deployment - update paths and service worker registration

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="MH Hub" />
-    <link rel="apple-touch-icon" href="/images/cover.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/mens-health-hub/images/cover.png" />
+    <link rel="manifest" href="/mens-health-hub/manifest.json" />
     
-    <title>Men's Health Hub - Farewell Magazine</title>
+    <title>Men's Health Hub - Uma lembrança de despedida</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
