--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
         font-family: 'Roboto', sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        touch-action: manipulation;
-        user-select: none;
-        -webkit-user-select: none;
+      }
+      
+      /* Restore scrolling for comments page */
+      .comments-page {
+        touch-action: auto;
+        user-select: auto;
+        -webkit-user-select: auto;
+        overflow-y: auto;
       }
       
       /* Custom scrollbar */
